--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title></title>
   </head>
   <body style="  background-color:#B2B4C2">
-    <p style="text-align: center;"><br>
-    </p>
-    <table style="width: 1150px; height: 180px;" border="1">
-      <tbody>
-        <tr>
-          <td style="width: 150.8px;">&nbsp;&nbsp; <img src="00000000000.jpeg"
-              alt="" title="MarMag#9" style="width: 123px; height: 165px;"></td>
-          <td style="text-align: center; background-color: #666666; width: 999.2px;">
-            <h4>&nbsp;&nbsp; My name is María Magdalena Jacobo Almanza, I am 20
-              years old and I am currently studying at the Technological
-              University of the State of Zacatecas the career of information
-              technologies </h4>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <p style="text-align: center;"><img src="00000000000.jpeg"
+
+        alt="" title="MarMag#9" style="width: 123px; height: 165px;"></p>
+    <h4>&nbsp;&nbsp; My name is María Magdalena Jacobo Almanza, I am 20 years
+      old and I am currently studying at the Technological University of the
+      State of Zacatecas the career of information technologies </h4>
+    <p style="text-align: center;"> </p>
+    <br>
     <p style="text-align: center;"><br>
     </p>
     <p><br>
